<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/sitename" />

    <EditText
        android:id="@+id/edit_site_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/siteurl" />

    <EditText
        android:id="@+id/edit_rss_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/edit_save_changes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/savechanges" />

    <Button
        android:id="@+id/edit_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deletesite" />

</LinearLayout>